add akan logo to the web file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Akan name</title>
 </head>
 <body>
-  <p></p>
+ <div class="logo">
+     <img src="akanlogo.png" alt="">
+ </div>
 </body>
 </html>
