set the height of the logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <div class="logo">
-     <img src="akanlogo.png" alt="">
+     <img src="akanlogo.png" alt="" height="100px">
  </div>
 </body>
 </html>
