add an H1 element

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
  <div class="logo">
      <img src="akanlogo.png" alt="" height="100px">
  </div>
+ <div class="intro">
+    <h1>THE AKAN NAMING</h1>    
+</div>
 
 
 
 
- 
 </body>
 </html>
