--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <div class="intro">
     <h1>THE AKAN NAMING</h1>    
 </div>
-<!-- <div class="wrapper">
+  <div class="wrappe">
     <div class="text">
       <h2>What is Akan Names?</h2><br>
       <p>Akan names are derived from Ghanian culture.<br> Akan names are derived from Ghanian culture.<br> Frequently in Ghana, children are given their <br>first name as a 'day name' 
@@ -60,7 +60,7 @@
 
 
     <script src="script.js "></script>
- -->
+
 
 
 </body>
