add form to the file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>Akan names are derived from Ghanian culture.<br> Akan names are derived from Ghanian culture.<br> Frequently in Ghana, children are given their <br>first name as a 'day name' 
         which corresponds<br> to the day in the week they were born.</p></span><a href="http://www.afropedea.org/akan-names"> More info on Akan names</a>
        </div>
-       <div class="container">
+       <div class="containe">
          <h2>Generate your Akan name here!!</h2><br>
          
           <form class="form">
