add a footer section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-    <div class="foote">
+    <div class="footer">
       <p>&copy; Richard Koinange:Akan Naming System, All Rights Reserved!</p>
     </div>
 
