link script.js to index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
     <div class="footer">
-      <p>&copy; Richard Koinange:Akan Naming System, All Rights Reserved!</p>
+      <p>&copy; Richar Koinange:Akan Naming System, All Rights Reserved!</p>
     </div>
 
 
