add  a LICENCE file

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
          <h2>Generate your Akan name here!!</h2><br>
          
           <form class="form">
-              <label>year</label>
-              <input type="text" id="year">
-              <label>month</label>
-              <input type="text" id="month">
-              <label>Day</label>
-              <input type="text" id="day">
+              <label>year</label><br>
+              <input type="text" id="year" placeholder="Enter your year of birth"><br>
+              <label>month</label><br>
+              <input type="text" id="month" placeholder="Enter your birth month"><br>
+              <label>Day</label><br>
+              <input type="text" id="day" placeholder="Enter your day of birth" ><br>
      
              male <input type="radio" id="gender" value="male" name="gender" checked> 
              female <input type="radio" id="gender" value="female" name="gender"><br>
